bug-063892 - iOS Web > Buyer> My credits : 'Add Credit' button overlaps with input field

--- a/application/views/scss/components/_misc.scss
+++ b/application/views/scss/components/_misc.scss
@@ -685,3 +685,22 @@ mark,
         max-width: 22px;
     }
 }
+
+//plugin
+.pac-container {
+    font-family: inherit;
+    box-shadow: $shadow1;
+    z-index: 1040;
+    border-top: $border !important;
+    .pac-item {
+        padding: 5px 10px;
+        border-top: $border !important;
+    }
+    .pac-icon {
+        background-image: url(images/retina/geo-alt.svg) !important;
+        background-size: 14px !important;
+        background-repeat: no-repeat;
+        background-color: transparent;
+        background-position: center;
+    }
+}
